	* Spellbook delivery is now more reliable in the Endgame (from GruntHack)
	* Healing potions may fix wounded legs
	* Player can wish for up to 100 projectiles
	* Wishes no longer increase prayer timeout
	* Land mines and beartraps weigh less
	Full list of changes available at https://github.com/Bulwersator/UnNetHackPlus/commits/master

2012-04-01  UnNetHack 4.0.0
	* Uncursed and blessed scrolls of magic mapping reveal secret doors
	* Blessed scrolls of magic mapping reveal objects
	* Dump log: show same information on final dump as wizard mode
	* Minotaurs respect Elbereth
	* Bones level tracking
	* Conduct: Racial armor tracking
	* extra AC point per worn piece of racial armor
	* Reduce occurrences of hint daemon to once per game
	* Automatically identify rings dropped into a sink when message is
	  shown
	* Allow stethoscopes to identify egg types (unless hallucinating)
	  (from SporkHack)
	* Reduce AC of dragon scales to 1 and dragon scale mails to 5
	* Killing your Quest leader opens up the stairs to the lower quest
	  levels (from SporkHack)

	* new branch:
	  - the Dragon Caves (from NetHack Brass R/S)

	* new dungeon features:
	  - muddy swamp (from NetHack Brass)

	* added items:
	  - chromatic dragon scales and scale mail

	* new monsters:
	  - chromatic dragons
	  - wax golems (providing candles as death drop) (from Slash'Em)
	
	* new levels:
	  - Sokoban levels (from GruntHack)

	* bug fixes:
	  - Draw health bar in inverse when color is disabled (reported by
	    Bernard Helyer)
	  - Warn atheist player when trying to offering the Amulet of Yendor
	  - Workaround for preventing the stairs to Vlad's tower appearing
	    in the wizard's tower

	* build fixes:
	  - Compilation failed on openSUSE when trying to link with curses but
	    tparm being present in ncurses (reported by Roger Koot)

2012-02-05  UnNetHack 3.6.1
	* Scatter contents of bag of holding explosion instead of
	  destroying it (from SporkHack)